--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -100,13 +100,19 @@
                 <enum>QFrame::Plain</enum>
                </property>
                <property name="smallDecimalPoint">
-                <bool>false</bool>
+                <bool>true</bool>
                </property>
                <property name="digitCount">
-                <number>3</number>
+                <number>7</number>
                </property>
                <property name="segmentStyle">
                 <enum>QLCDNumber::Flat</enum>
+               </property>
+               <property name="value" stdset="0">
+                <double>0.000000000000000</double>
+               </property>
+               <property name="intValue" stdset="0">
+                <number>0</number>
                </property>
               </widget>
              </item>
@@ -299,7 +305,6 @@
     <addaction name="actionConnect"/>
     <addaction name="actionDisconnect"/>
     <addaction name="separator"/>
-    <addaction name="actionInitMotor"/>
     <addaction name="separator"/>
     <addaction name="actionQuit"/>
    </widget>
@@ -332,7 +337,6 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
-   <addaction name="actionInitMotor"/>
    <addaction name="separator"/>
    <addaction name="actionConnect"/>
    <addaction name="actionDisconnect"/>
@@ -399,15 +403,6 @@
    </property>
    <property name="text">
     <string>Clear</string>
-   </property>
-  </action>
-  <action name="actionInitMotor">
-   <property name="icon">
-    <iconset resource="icone.qrc">
-     <normaloff>:/iconeMotor/icone/reset.png</normaloff>:/iconeMotor/icone/reset.png</iconset>
-   </property>
-   <property name="text">
-    <string>InitMotor</string>
    </property>
   </action>
  </widget>
